--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,7 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
-
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+    <p>Антон Попов</p>
   </body>
 </html>
