--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,58 +24,32 @@
         <h1>Каталог товаров</h1>
       </section>
       <section class="catalog">
-        <div class="catalog__product-card">
-          <picture>
-            <source media="(min-width: 1150px)" srcset="img/rabbit-desktop.jpg 1x, img/rabbit-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/rabbit-tablet.jpg 1x, img/rabbit-tablet@2x.jpg 2x">
-            <img class="catalog__image" src="img/rabbit-mobile.jpg" srcset="img/rabbit-mobile@2x.jpg 2x" width="260"
-              height="195" alt="игрушечный зайчик">
-          </picture>
-          <div class="catalog__border">
-            <h2 class="catalog__title">Зайчик-попрыгайчик</h2>
-            <p class="catalog__text">Рост 30 см, вес 200 г</p>
-            <span class="catalog__price">1 200 руб.</span>
+        <section class="catalog__product-card">
+          <img class="catalog__product-image" src="img/rabbit-mobile.jpg" width="260" height="195" alt="Зайчик-попрыгайчик.">
+          <h2 class="catalog__product-title">Зайчик-попрыгайчик</h2>
+          <p class="catalog__product-description">Рост 30 см, вес 200 г</p>
+          <p class="catalog__product-price">1 200 руб.</p>
           </div>
-        </div>
-        <div class="catalog__product-card">
-          <picture>
-            <source media="(min-width: 1150px)"
-              srcset="img/basket-laundry-desktop.jpg 1x, img/basket-laundry-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/basket-laundry-tablet.jpg 1x, img/basket-laundry-tablet@2x.jpg 2x">
-            <img class="catalog__image" src="img/basket-laundry-mobile.jpg" srcset="img/basket-laundry-mobile@2x.jpg 2x"
-              width="260" height="195" alt="корзинка для белья">
-          </picture>
-          <div class="catalog__border">
-            <h2 class="catalog__title">Корзинка для белья</h2>
-            <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
-            <span class="catalog__price">690 руб.</span>
-          </div>
-        </div>
-        <div class="catalog__product-card">
-          <picture>
-            <source media="(min-width: 1150px)" srcset="img/basket-toy-desktop.jpg 1x, img/basket-toy-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/basket-toy-tablet.jpg 1x, img/basket-toy-tablet@2x.jpg 2x">
-            <img class="catalog__image" src="img/basket-toy-mobile.jpg" srcset="img/basket-toy-mobile@2x.jpg 2x"
-              width="260" height="195" alt="большая корзина для игрушек">
-          </picture>
-          <div class="catalog__border">
-            <h2 class="catalog__title">Большая корзинка для игрушек</h2>
-            <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
-            <span class="catalog__price">1 500 руб.</span>
-          </div>
-        </div>
+        </section>
+        <section class="catalog__product-card">
+          <img class="catalog__product-image" src="img/rabbit-mobile.jpg" width="260" height="195" alt="Корзинка для белья.">
+          <h2 class="catalog__product-title">Корзинка для белья</h2>
+          <p class="catalog__product-description">Диаметр 15 см, высота 10 см</p>
+          <p class="catalog__product-price">690 руб.</p>
+        </section>
+        <section class="catalog__product-card">
+          <img class="catalog__product-image" src="img/basket-toy-mobile.jpg" width="260" height="195" alt="Большая корзина для игрушек.">
+          <h2 class="catalog__product-title">Большая корзинка для игрушек</h2>
+          <p class="catalog__product-description">Диаметр 30 см, высота 30 см</p>
+          <p class="catalog__product-price">1 500 руб.</p>
+        </section>
       </section>
       <section class="video">
         <h2 class="video__title">Процесс производства</h2>
-        <picture>
-          <source media="(min-width: 768px)" srcset="img/video-tablet.jpg 1x, img/video-tablet@2x.jpg 2x">
-          <img class="video__film" src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg 2x" width="260" height="160"
-            alt="Видео процесса производства">
-        </picture>
+        <img class="video__film" src="img/video-mobile.jpg" width="260" height="160" alt="Видео процесса производства.">
         <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
           как появляются наши товары.</p>
-        <a class="video__button button" href="#">сделать заказ</a>
+        <a class="video__button button" href="#">Cделать заказ</a>
       </section>
       <footer class="footer">
         <a class="footer__link-social-vk" href="#"><span class="visually-hidden">Вконтакте</span></a>
